style: correct description & links alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2873,7 +2873,7 @@ input[type='button'].small,
 
 .feature .content h3 {
   margin-bottom: 0.5em;
-  text-align: left;
+  /* text-align: left; */
 }
 
 .content a {
